# PyMediaAPI

./: .env.example  README.md  pyproject.toml
apps/api/: helpers.py  models.py  serializers.py
apps/api/migrations/: 0001_initial.py
apps/api/urls/: main.py  media.py  users.py
apps/api/views/: auth.py  media.py
core/: settings.py  urls.py
